leftovers/exports/scripts-exports/prod/network/sg-sg-0339fec4c6ab464a3.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-0339fec4c6ab464a3",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-d2a9d9bb",
            "SecurityGroupArn": "arn:aws:ec2:us-east-2:154948530138:security-group/sg-0339fec4c6ab464a3",
            "OwnerId": "154948530138",
            "GroupName": "brainswayLambda",
            "Description": "brainsway lambda code",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 5432,
                    "ToPort": 5432,
                    "UserIdGroupPairs": [
                        {
                            "Description": "postgresSQL connection",
                            "UserId": "154948530138",
                            "GroupId": "sg-0c0a0065"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "temp allow all traffic ",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [
                        {
                            "Description": "temp allow all traffic ",
                            "CidrIpv6": "::/0"
                        }
                    ],
                    "PrefixListIds": []
                }
            ]
        }
    ]
}
