leftovers/exports/scripts-exports/prod/network/sg-sg-0691bc38f9ee8840b.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-0691bc38f9ee8840b",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-d2a9d9bb",
            "SecurityGroupArn": "arn:aws:ec2:us-east-2:154948530138:security-group/sg-0691bc38f9ee8840b",
            "OwnerId": "154948530138",
            "GroupName": "Amazon-QuickSight-access",
            "Description": "Amazon-QuickSight-access",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 5432,
                    "ToPort": 5432,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "",
                            "CidrIp": "52.15.247.160/27"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [
                        {
                            "CidrIpv6": "::/0"
                        }
                    ],
                    "PrefixListIds": []
                }
            ]
        }
    ]
}
