leftovers/exports/scripts-exports/prod/network/sg-sg-07014b78205cb6171.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-07014b78205cb6171",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-d2a9d9bb",
            "SecurityGroupArn": "arn:aws:ec2:us-east-2:154948530138:security-group/sg-07014b78205cb6171",
            "OwnerId": "154948530138",
            "GroupName": "launch-wizard-3",
            "Description": "launch-wizard-3 created 2024-01-02T09:36:13.308Z",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 22,
                    "ToPort": 22,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ]
}
