leftovers/exports/scripts-exports/prod/network/sg-sg-070322ceb3fe42ccd.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-070322ceb3fe42ccd",
            "IpPermissionsEgress": [],
            "Tags": [
                {
                    "Key": "GuardDutyManaged",
                    "Value": "true"
                }
            ],
            "VpcId": "vpc-d2a9d9bb",
            "SecurityGroupArn": "arn:aws:ec2:us-east-2:154948530138:security-group/sg-070322ceb3fe42ccd",
            "OwnerId": "154948530138",
            "GroupName": "GuardDutyManagedSecurityGroup-vpc-d2a9d9bb",
            "Description": "Associated with VPC-vpc-d2a9d9bb and tagged as GuardDutyManaged",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ]
}
